--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pug": "2.0.0-beta11"
   }
 }
